Fiz o inícios do HTML e do CSS.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h3>Estudante do colégio Sesi de referência</h3>
         <br>
         <div class="flex">
-           
+           <p>Olá meu nome é Rodrigo, sou iniciante em programação, atualmente utilizo o JavaScript para programar, para me ajudar eu uso o google e cursos de JavaScript no YouTube, com os cursos no YouTube eu consigo aprender bastante e faço as atividades com mais facilidade.No meu tempo livre eu jogo videogame, vou para academia e assisto filmes principalmente de terror.No colégio Sesi de referência estou fazendo técnico de desenvolvimento de sistemas e na área da programação pretendo tentar melhorar, para conseguir programar melhor.</p>
         </div>
     </header>
     <main>
