Estou quase finalizando as ferramentas e as imagens.

--- a/index.html
+++ b/index.html
@@ -10,12 +10,26 @@
 <body>
     <header>
         <h1>Rodrigo Felippe Schulze</h1>
-        <br>
         <h3>Estudante do colégio Sesi de referência</h3>
-        <br>
         <div class="flex">
-           <p>Olá meu nome é Rodrigo, sou iniciante em programação, atualmente utilizo o JavaScript para programar, para me ajudar eu uso o google e cursos de JavaScript no YouTube, com os cursos no YouTube eu consigo aprender bastante e faço as atividades com mais facilidade.No meu tempo livre eu jogo videogame, vou para academia e assisto filmes principalmente de terror.No colégio Sesi de referência estou fazendo técnico de desenvolvimento de sistemas e na área da programação pretendo tentar melhorar, para conseguir programar melhor.</p>
+            <p>Olá meu nome é Rodrigo, sou iniciante em programação, atualmente utilizo o JavaScript para programar,
+                para me ajudar eu uso o google e cursos de JavaScript no YouTube, com os cursos no YouTube eu consigo
+                aprender bastante e faço as atividades com mais facilidade.No meu tempo livre eu jogo videogame, vou
+                para academia e assisto filmes principalmente de terror.No colégio Sesi de referência estou fazendo
+                técnico de desenvolvimento de sistemas e na área da programação pretendo tentar melhorar, para conseguir
+                programar melhor.</p>
         </div>
+        <p>Quer entrar em contato?Utilize minhas redes sociais.</p>
+
+        <div class="flex2">
+
+            <img id="imagens" src="ImagemEmail.png" alt="imagem do icone do email">
+            <p>Email:rodrigo_f_schulze@estudante.sesisenai.org.br</p>
+            <img id="imagens" src="simboloLinkedin.jpeg" alt="imagem do icone do linkedin">
+            <p>Linkedin:</p>
+        </div>
+        <p>Aplicações e dados:</p>
+        
     </header>
     <main>
 
@@ -24,7 +38,7 @@
     <footer>
 
     </footer>
-   
+
 
 
 </body>
