Colocado as imagens de aplicação de dados.

--- a/index.html
+++ b/index.html
@@ -23,13 +23,25 @@
 
         <div class="flex2">
 
-            <img id="imagens" src="ImagemEmail.png" alt="imagem do icone do email">
+            <img id="imagens" src="ImagemEmail.png" alt="imagem do ícone do email">
             <p>Email:rodrigo_f_schulze@estudante.sesisenai.org.br</p>
-            <img id="imagens" src="simboloLinkedin.jpeg" alt="imagem do icone do linkedin">
+            <img id="imagens" src="simboloLinkedin.jpeg" alt="imagem do ícone do linkedin">
             <p>Linkedin:</p>
         </div>
         <p>Aplicações e dados:</p>
-        
+        <div class="flex2">
+
+            <img id="imagens" src="simboloJS.png" alt="imagem do ícone JS">
+            <p>JavaScript</p>
+            <img id="imagens" src="simboloHTML.png" alt="imagem do ícone HTML">
+            <p>HTML</p>
+            <img id="imagens" src="simboloCSS.png" alt="imagem do ícone CSS">
+            <p>CSS</p>
+        </div>
+        <p>DevOps:</p>
+        <div class="flex2">
+            <img id="imagens" src=""
+        </div>
     </header>
     <main>
 
