Colocado as imagens das DevOps.

--- a/index.html
+++ b/index.html
@@ -39,8 +39,12 @@
             <p>CSS</p>
         </div>
         <p>DevOps:</p>
+
         <div class="flex2">
-            <img id="imagens" src=""
+            <img id="imagens" src="simboloGitHub.webp" alt="imagem do ícone GitHub">
+            <p>GitHub:https://github.com/Rodrigo222520</p>
+            <img id="imagens" src="simboloWindows.webp" alt="imagem do Icone windows">
+            <p>Windows 10</p>
         </div>
     </header>
     <main>
