Colocado a imagem de ferramenta.

--- a/index.html
+++ b/index.html
@@ -41,11 +41,19 @@
         <p>DevOps:</p>
 
         <div class="flex2">
+
             <img id="imagens" src="simboloGitHub.webp" alt="imagem do ícone GitHub">
             <p>GitHub:https://github.com/Rodrigo222520</p>
             <img id="imagens" src="simboloWindows.webp" alt="imagem do Icone windows">
             <p>Windows 10</p>
         </div>
+        <p>Ferramenta:</p>
+
+        <div class="flex2">
+            <img id="imagens" src="simboloVisualStudioCode.png" alt="imagem do ícone VisualStudioCode">
+            <p>VisualStudioCode</p>
+        </div>
+        
     </header>
     <main>
 
