Feito o espaçamento de texto e das imagens e mudado o nome de 1 pasta

--- a/private/index.html
+++ b/private/index.html
@@ -23,34 +23,34 @@
 
         <div class="flex2">
 
-            <img id="imagens" src="../logo/ImagemEmail.png" alt="imagem do ícone do email">
+            <img id="imagens" src="../imagens/ImagemEmail.png" alt="imagem do ícone do email">
             <p>Email:rodrigo_f_schulze@estudante.sesisenai.org.br</p>
-            <img id="imagens" src="../logo/simboloLinkedin.jpeg" alt="imagem do ícone do linkedin">
+            <img id="imagens" src="../imagens/simboloLinkedin.jpeg" alt="imagem do ícone do linkedin">
             <p>Linkedin:</p>
         </div>
         <p>Aplicações e dados:</p>
         <div class="flex2">
 
-            <img id="imagens" src="../logo/simboloJS.png" alt="imagem do ícone JS">
+            <img id="imagens" src="../imagens/simboloJS.png" alt="imagem do ícone JS">
             <p>JavaScript</p>
-            <img id="imagens" src="../logo/simboloHTML.png" alt="imagem do ícone HTML">
+            <img id="imagens" src="../imagens/simboloHTML.png" alt="imagem do ícone HTML">
             <p>HTML</p>
-            <img id="imagens" src="../logo/simboloCSS.png" alt="imagem do ícone CSS">
+            <img id="imagens" src="../imagens/simboloCSS.png" alt="imagem do ícone CSS">
             <p>CSS</p>
         </div>
         <p>DevOps:</p>
 
         <div class="flex2">
 
-            <img id="imagens" src="../logo/simboloGitHub.webp" alt="imagem do ícone GitHub">
+            <img id="imagens" src="../imagens/simboloGitHub.webp" alt="imagem do ícone GitHub">
             <p>GitHub:https://github.com/Rodrigo222520</p>
-            <img id="imagens" src="../logo/simboloWindows.webp" alt="imagem do Icone windows">
+            <img id="imagens" src="../imagens/simboloWindows.webp" alt="imagem do Icone windows">
             <p>Windows 10</p>
         </div>
         <p>Ferramenta:</p>
 
         <div class="flex2">
-            <img id="imagens" src="../logo/simboloVisualStudioCode.png" alt="imagem do ícone VisualStudioCode">
+            <img id="imagens" src="../imagens/simboloVisualStudioCode.png" alt="imagem do ícone VisualStudioCode">
             <p>VisualStudioCode</p>
         </div>
         
