Quase finalizado o portfólio, faltando apenas a foto e arrumar o texto "sou eu"

--- a/private/index.html
+++ b/private/index.html
@@ -9,7 +9,12 @@
 
 <body>
     <header>
-        <h1>Rodrigo Felippe Schulze</h1>
+        <div class="subir">
+            <h1>Rodrigo Felippe Schulze</h1>
+        </div>
+        <div class="textoDireita">
+            <h2>Sou eu!</h2>
+        </div>
         <h3>Estudante do colégio Sesi de referência</h3>
         <div class="flex">
             <p>Olá meu nome é Rodrigo, sou iniciante em programação, atualmente utilizo o JavaScript para programar,
@@ -25,8 +30,6 @@
 
             <img id="imagens" src="../imagens/ImagemEmail.png" alt="imagem do ícone do email">
             <p>Email:rodrigo_f_schulze@estudante.sesisenai.org.br</p>
-            <img id="imagens" src="../imagens/simboloLinkedin.jpeg" alt="imagem do ícone do linkedin">
-            <p>Linkedin:</p>
         </div>
         <p>Aplicações e dados:</p>
         <div class="flex2">
@@ -53,7 +56,7 @@
             <img id="imagens" src="../imagens/simboloVisualStudioCode.png" alt="imagem do ícone VisualStudioCode">
             <p>VisualStudioCode</p>
         </div>
-        
+
     </header>
     <main>
 
